noinst_LTLIBRARIES = libpymagick.la

libpymagick_la_SOURCES = _DrawableFillRule.cpp \
						 _PathMovetoAbs.cpp \
						 _DrawableText.cpp \
						 _Blob.cpp \
						 _ColorspaceType.cpp \
						 _DrawableRotation.cpp \
						 _DrawableCompositeImage.cpp \
						 _PathSmoothCurvetoAbs.cpp \
						 _PathLinetoVerticalAbs.cpp \
						 _DrawableCircle.cpp \
						 _DrawablePoint.cpp \
						 _PathArcRel.cpp \
						 _DrawableClipPath.cpp \
						 _DrawableArc.cpp \
						 _PathLinetoAbs.cpp \
						 _DrawablePushPattern.cpp \
						 _Image.cpp \
						 _DrawableTextDecoration.cpp \
						 _PathQuadraticCurvetoAbs.cpp \
						 _DrawableSkewX.cpp \
						 _DrawableDashArray.cpp \
						 _DrawableFont.cpp \
						 _DrawableAffine.cpp \
						 _DrawableTextAntialias.cpp \
						 _DrawableScaling.cpp \
						 _DrawableViewbox.cpp \
						 _PathQuadraticCurvetoRel.cpp \
						 _DrawableRoundRectangle.cpp \
						 _DrawableEllipse.cpp \
						 _Pixels.cpp \
						 _PathArcAbs.cpp \
						 _DrawableSkewY.cpp \
						 _PathArcArgs.cpp \
						 _PathLinetoRel.cpp \
						 _DrawableBezier.cpp \
						 _DrawableMatte.cpp \
						 _DrawableStrokeWidth.cpp \
						 _DrawablePushClipPath.cpp \
						 _PathLinetoVerticalRel.cpp \
						 _Color.cpp \
						 _DrawableTranslation.cpp \
						 _DrawableColor.cpp \
						 _PathCurvetoAbs.cpp \
						 _Exception.cpp \
						 _DrawablePointSize.cpp \
						 _DrawableDashOffset.cpp \
						 _VPath.cpp \
						 _DrawableStrokeColor.cpp \
						 _PathSmoothQuadraticCurvetoRel.cpp \
						 _DrawableStrokeAntialias.cpp \
						 _DrawableLine.cpp \
						 _DrawablePushGraphicContext.cpp \
						 _PathCurvetoRel.cpp \
						 _TypeMetric.cpp \
						 _DrawableStrokeOpacity.cpp \
						 _DrawablePopClipPath.cpp \
						 _DrawablePath.cpp \
						 _Coordinate.cpp \
						 _PathQuadraticCurvetoArgs.cpp \
						 _DrawableGravity.cpp \
						 _PathCurvetoArgs.cpp \
						 _DrawablePolyline.cpp \
						 _DrawableStrokeLineJoin.cpp \
						 _DrawableFillColor.cpp \
						 _PathLinetoHorizontalAbs.cpp \
						 _DrawableStrokeLineCap.cpp \
						 _DrawablePopGraphicContext.cpp \
						 _Geometry.cpp \
						 _CompositeOperator.cpp \
						 _GravityType.cpp \
						 _FilterTypes.cpp \
						 _DecorationType.cpp \
						 _CompressionType.cpp \
						 _DrawablePopPattern.cpp \
						 _PathSmoothQuadraticCurvetoAbs.cpp \
						 _DrawableFillOpacity.cpp \
						 _DrawableTextUnderColor.cpp \
						 _DrawablePolygon.cpp \
						 _main.cpp \
						 _DrawableRectangle.cpp \
						 _PathMovetoRel.cpp \
						 _Drawable.cpp \
						 _DrawableMiterLimit.cpp \
						 _PathClosePath.cpp \
						 _PathSmoothCurvetoRel.cpp \
						 _PathLinetoHorizontalRel.cpp 

libpymagick_la_CXXFLAGS = -I$(PYTHON_INCLUDE_DIR) $(BOOST_CPPFLAGS) $(MAGICKPP_CFLAGS)
